[gd_scene load_steps=13 format=3 uid="uid://dk8vhn6l7ihh3"]

[ext_resource type="PackedScene" uid="uid://d3n2b5wrjdhu0" path="res://views/gameplay/animal.tscn" id="1_7biu0"]
[ext_resource type="Script" uid="uid://cxgfuigam05p6" path="res://scenes/gameplay.gd" id="1_gameplay"]
[ext_resource type="Resource" uid="uid://b2yji08haqrxg" path="res://resources/animal_data/woodpecker.tres" id="3_ct7aa"]
[ext_resource type="PackedScene" uid="uid://dh7mk3xbkv8rq" path="res://views/gameplay/score_ui.tscn" id="4_ct7aa"]
[ext_resource type="Resource" uid="uid://b84opwkiml62f" path="res://resources/animal_data/balloon_bear.tres" id="4_ocj2s"]
[ext_resource type="PackedScene" uid="uid://dkg3dewx7jyhm" path="res://views/gameplay/boss.tscn" id="6_din8e"]
[ext_resource type="PackedScene" uid="uid://cjb8n4xqy7yqv" path="res://views/gameplay/shield_overlay.tscn" id="7_shield"]
[ext_resource type="Script" uid="uid://dndp8f8567uia" path="res://views/gameplay/song_player.gd" id="8_e124b"]
[ext_resource type="PackedScene" uid="uid://cw8h3x7n5jk2l" path="res://views/gameplay/game_over_ui.tscn" id="9_game_over"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6gd1"]
size = Vector2(576, 166)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1v76"]
size = Vector2(576, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bh5q"]
size = Vector2(576, 80)

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_gameplay")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0.45607007, 0.7278994, 0.75919205, 1)

[node name="Hinterland" type="Area2D" parent="."]
position = Vector2(960, 880)

[node name="ShieldOverlay" parent="Hinterland" instance=ExtResource("7_shield")]
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 120.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hinterland"]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_a6gd1")

[node name="AttackZone" type="Area2D" parent="Hinterland"]
position = Vector2(0, -158)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hinterland/AttackZone"]
shape = SubResource("RectangleShape2D_l1v76")

[node name="Line2D" type="Line2D" parent="Hinterland/AttackZone"]
points = PackedVector2Array(-288, 0, 288, 0)
width = 5.0
default_color = Color(0.8352941, 0.8117647, 0.5803922, 0.92156863)

[node name="HeavyAttackZone" type="Area2D" parent="Hinterland"]
position = Vector2(0, -158)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hinterland/HeavyAttackZone"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_4bh5q")

[node name="Line2D2" type="Line2D" parent="Hinterland/HeavyAttackZone"]
points = PackedVector2Array(-288, -15, 288, -15)
width = 70.0
default_color = Color(0.8352941, 0.5019608, 0.9490196, 0.2627451)

[node name="Animals" type="HBoxContainer" parent="Hinterland"]
offset_left = -287.0
offset_top = -42.0
offset_right = 289.0
offset_bottom = 118.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Animal" parent="Hinterland/Animals" instance=ExtResource("1_7biu0")]
custom_minimum_size = Vector2(128, 148)
layout_mode = 2
attack_count = 0

[node name="Animal2" parent="Hinterland/Animals" instance=ExtResource("1_7biu0")]
custom_minimum_size = Vector2(128, 160)
layout_mode = 2
animal_data = ExtResource("3_ct7aa")
key_binding = "D"
attack_count = 0

[node name="Animal3" parent="Hinterland/Animals" instance=ExtResource("1_7biu0")]
layout_mode = 2
animal_data = ExtResource("4_ocj2s")
key_binding = "F"
attack_count = 0

[node name="EnemyArea" type="Node2D" parent="."]
position = Vector2(960, 100)

[node name="ScoreUI" parent="." instance=ExtResource("4_ct7aa")]
offset_left = 100.0
offset_top = 500.0
offset_right = 500.0
offset_bottom = 850.0
size_flags_horizontal = 4

[node name="Boss" parent="." instance=ExtResource("6_din8e")]
position = Vector2(960, 100)

[node name="SongPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("8_e124b")

[node name="GameOverUI" parent="." instance=ExtResource("9_game_over")]
offset_left = 960.0
offset_top = 600.0
offset_right = 960.0
offset_bottom = 600.0
